# vantage-jobs-catalog

./: .gitignore  .tool-versions  LICENSE  Makefile  README.md  cdk.json  index.html  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: catalog-cd.yaml  pr-ci.yaml
builder/: cache.py  config.py  context.py  exceptions.py  format.py  logging.py  main.py  schemas.py  tools.py  types.py
builder/subapps/: __init__.py  apptainer.py  catalog.py  files.py  helpers.py  settings.py
cfd-openfoam-motorbike/: Dockerfile  README.md  job-script.sh  metadata.yaml
hpcg-benchmark/: Dockerfile  Make.ubuntu  README.md  hpcg.sh  metadata.yaml
hpcg-benchmark-aocc/: Dockerfile  HPCG.dat.txt  README.md  hpcg-aocc.sh  metadata.yaml
hpcg-benchmark-intel/: Dockerfile  job-script.sh  metadata.yaml
hpcg-benchmark-oacc/: Dockerfile  README.md  entrypoint.sh  hpcg-oacc.sh  metadata.yaml
hpl-benchmark/: Dockerfile  Make.ubuntu  README.md  hpl.sh  metadata.yaml
hpl-benchmark-aocc/: Dockerfile  README.md  entrypoint.sh  hpl-aocc.sh  metadata.yaml
hpl-benchmark-intel/: Dockerfile  Make.Linux  job-script.sh  metadata.yaml
infra/: app.py  catalog_bucket.py  website.py
